--- a/Develop/style.css
+++ b/Develop/style.css
@@ -15,10 +15,10 @@ textarea {
 
 .jumbotron {
   text-align: center;
-  background-color: transparent;
-  color: black;
+  background-color: rgb(144, 173, 255);
+  color: rgb(255, 255, 255);
   border-radius: 0;
-  border-bottom: 10px solid black;
+  border-bottom: 20px solid rgb(0, 179, 24);
 }
 
 .description {
@@ -68,4 +68,16 @@ textarea {
 .saveBtn i:hover {
   font-size: 20px;
   transition: all 0.3s ease-in-out;
+}
+
+.grey {
+  background-color: rgb(201, 201, 201);
+}
+
+#dot {
+    height: 50px;
+    width: 50px;
+    background-color: rgb(255, 240, 25);
+    border-radius: 50%;
+    display: inline-block;
 }
